[package]
name = "btll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0.162", features = ["derive"] }
